# crewai

./: .gitignore  AGENTS.md  README.md  automation_report.py  pyproject.toml
nomad_project/: README.md  pyproject.toml
nomad_project/src/nomad_project/: crew.py  main.py
nomad_project/src/nomad_project/config/: agents.yaml  tasks.yaml
nomad_project/src/nomad_project/tools/: selenium_scraper.py
report_automation/: README.md  pyproject.toml
report_automation/config/: agents.yaml  tasks.yaml
report_automation/src/report_automation/: crew.py  main.py
report_automation/src/report_automation/tools/: web_search.py
src/nomad_project/: main.py
src/nomad_project/tools/: __init__.py
