[project]
name = "nomad_project"
version = "0.1.0"
description = "nomad_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "selenium>=4.21.0",
    "beautifulsoup4>=4.12.2",
    "markdown>=3.5",
    "fpdf2>=2.7.8"
]

[project.scripts]
nomad_project = "nomad_project.main:run"
run_crew = "nomad_project.main:run"
train = "nomad_project.main:train"
replay = "nomad_project.main:replay"
test = "nomad_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
