[project]
name = "report_automation"
version = "0.1.0"
description = "Web automation report generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "selenium>=4.0.0",
    "beautifulsoup4",
    "pdfkit",
    "reportlab",
    "jinja2",
    "requests"
]

[project.scripts]
report_automation = "report_automation.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
